--- a/Views/Suppliers/Index.cshtml
+++ b/Views/Suppliers/Index.cshtml
@@ -1,5 +1,5 @@
-@model IEnumerable<WebApplication1.Models.Supplier>
-@using WebApplication1.Models
+@model IEnumerable<Nhom13.Models.Supplier>
+@using Nhom13.Models
 
 @{
     ViewData["Title"] = "Quản lý nhà cung cấp";
