--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<WebApplication1.Models.Product>
+@model IEnumerable<Nhom13.Models.Product>
 
 @{
     ViewData["Title"] = "Danh sách sản phẩm";
@@ -23,22 +23,19 @@
                     <thead>
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.Code)
-                            </th>
-                            <th>
                                 @Html.DisplayNameFor(model => model.Name)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.Unit)
+                                @Html.DisplayNameFor(model => model.Description)
                             </th>
                             <th>
                                 @Html.DisplayNameFor(model => model.Price)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.SupplierName)
+                                @Html.DisplayNameFor(model => model.Quantity)
                             </th>
                             <th>
-                                @Html.DisplayNameFor(model => model.IsActive)
+                                @Html.DisplayNameFor(model => model.CreatedDate)
                             </th>
                             <th>Thao tác</th>
                         </tr>
@@ -48,22 +45,19 @@
                         {
                             <tr>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Code)
-                                </td>
-                                <td>
                                     @Html.DisplayFor(modelItem => item.Name)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Unit)
+                                    @Html.DisplayFor(modelItem => item.Description)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Price)
+                                    @item.Price.ToString("N0") VNĐ
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.SupplierName)
+                                    @Html.DisplayFor(modelItem => item.Quantity)
                                 </td>
                                 <td>
-                                    @(item.IsActive ? "Hoạt động" : "Ngừng hoạt động")
+                                    @item.CreatedDate.ToString("dd/MM/yyyy")
                                 </td>
                                 <td>
                                     <div class="btn-group" role="group">
@@ -90,7 +84,13 @@
 @section Scripts {
     <script>
         $(document).ready(function () {
-            $('#productsTable').DataTable();
+            $('#productsTable').DataTable({
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/1.10.24/i18n/Vietnamese.json"
+                },
+                "order": [[4, "desc"]], // Sort by CreatedDate by default
+                "responsive": true
+            });
         });
     </script>
 } 
