--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using WebApplication1
-@using WebApplication1.Models
+﻿@using Nhom13
+@using Nhom13.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
